fixed bugs and ommissions

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <button onclick="calculateAkanName()">Calculate</button>
         <p id="result"></p>
     </div>
+    <script src="script.js">
+    </script>
+    
 
 
 </body>
